# dwizzyBRAIN

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.irag  Makefile  PRD.md  go.mod  go.sum
api/: docs.go  docs_test.go  index.go  index_test.go  news_test.go  openapi.go  openapi.json  openapi_test.go  router.go
contracts/: .env.example  README.md  package-lock.json  package.json
docs/: 0_RestApiReport.md  Nexure Rest API.md  PRD-QUANT-IMPLEMENTATION-PLAN.md  PRD-QUANT.md  README.md  Ryzumi Rest API.md  YTDLP API.md  auth-account-system-design.md  ci-cd.md  developer-guide.md  dwizzyBRAIN-implementation-status.md  dwizzyBRAIN-structure-v4.md  dwizzyOS_market_architecture.docx.md  (+8 more)
quant/: Dockerfile.quant  README.md  docker-compose.yml  pyproject.toml
quant/src/dwizzybrain_quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quant/src/quant/: __init__.py  anomaly.py  config.py  events.py  funding.py  indicators.py  main.py  models.py  patterns.py  persistence.py  prediction.py  schema.py  scorer.py  smc.py
quant/src/quant/backfill/: build_vectors.py  compute_bulk.py  db.py  export_cold.py  fetch_forexfactory.py  fetch_fred.py  fetch_ohlcv.py  fetch_yfinance.py  label_events.py  search_patterns.py  train_outcome_model.py
quant/tests/: test_anomaly.py  test_backfill.py  test_backfill_cli.py  test_config.py  test_events.py  test_export_cold.py  test_funding.py  test_indicators.py  test_label_and_train_backfill.py  test_main.py  test_patterns.py  test_prediction.py  test_scorer.py  test_search_patterns.py  test_smc.py  test_yfinance_backfill.py
(+276 files in other folders)
